[gd_scene load_steps=4 format=3 uid="uid://deaixlobxpe2i"]

[ext_resource type="Script" path="res://Levels/Menus/options_tab.gd" id="1_0fyri"]
[ext_resource type="FontFile" uid="uid://b0yxefbdevtit" path="res://Assets/Font/PixelifySans-VariableFont_wght.ttf" id="1_krhx6"]
[ext_resource type="PackedScene" uid="uid://vtd5m813eptr" path="res://Levels/Menus/input_settings.tscn" id="3_0jje5"]

[node name="OptionsTab" type="Control"]
layout_mode = 3
anchor_top = 0.100309
anchor_right = 1.0
anchor_bottom = 0.867284
script = ExtResource("1_0fyri")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 30
tab_alignment = 1
current_tab = 0

[node name="Graphics" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Graphics"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 2.0
offset_right = 4.0
offset_bottom = -87.333
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="FullScreen" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "Fullscreen"

[node name="Fullscreen_btn" type="CheckButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 1.66
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 20

[node name="WindowSize" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "Resolution"

[node name="WindowSize_btn" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.76
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 25
expand_icon = true

[node name="Vsync" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "Vsync"

[node name="Vsync_btn" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 25

[node name="Sound" type="TabBar" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_stretch_ratio = 3.75
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 16
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="MasterVolume" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="MasterVolume_btn" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sft" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "Sound FX?"

[node name="Sft_btn" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_stretch_ratio = 3.75
theme_override_fonts/font = ExtResource("1_krhx6")
metadata/_tab_index = 2

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="InputButton" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="InputButton2" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="InputButton3" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="InputButton4" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="InputButton5" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="InputButton6" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="InputButton7" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_0jje5")]
layout_mode = 2

[node name="Reset" type="Button" parent="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 31
text = "Reset to default"

[node name="Accessibility" type="TabBar" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_stretch_ratio = 3.75
theme_override_fonts/font = ExtResource("1_krhx6")
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Accessibility"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Accessibility/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Accessibility/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "A1"

[node name="Label2" type="Label" parent="TabContainer/Accessibility/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 32
text = "A2"

[node name="Exit" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 90)
layout_mode = 2
offset_top = 738.333
offset_right = 1920.0
offset_bottom = 828.333
size_flags_vertical = 4
size_flags_stretch_ratio = 1.57
theme_override_fonts/font = ExtResource("1_krhx6")
theme_override_font_sizes/font_size = 35
text = "Exit"
icon_alignment = 1

[connection signal="pressed" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Fullscreen_btn" to="." method="_on_fullscreen_btn_pressed"]
[connection signal="toggled" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Fullscreen_btn" to="." method="_on_fullscreen_btn_toggled"]
[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/WindowSize_btn" to="." method="_on_window_size_btn_item_selected"]
[connection signal="toggled" from="TabContainer/Graphics/MarginContainer/VBoxContainer/WindowSize_btn" to="." method="_on_window_size_btn_toggled"]
[connection signal="toggled" from="TabContainer/Graphics/MarginContainer/VBoxContainer/WindowSize_btn" to="." method="_on_bloom_btn_toggled"]
[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Vsync_btn" to="." method="_on_vsync_btn_item_selected"]
[connection signal="toggled" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Vsync_btn" to="." method="_on_vsync_btn_toggled"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/MasterVolume_btn" to="." method="_on_master_volume_btn_value_changed"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/Sft_btn" to="." method="_on_sft_btn_value_changed"]
[connection signal="pressed" from="TabContainer/Controls/PanelContainer/MarginContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
